Fixing blurry images

--- a/components/offer/offer_img.scss
+++ b/components/offer/offer_img.scss
@@ -1,3 +1,5 @@
+$grey: rgba(217, 215, 215, 0.5);
+
 .main_img {
 	display: flex;
 	justify-content: center;
