--- a/components/offer/offers.scss
+++ b/components/offer/offers.scss
@@ -1,3 +1,5 @@
+$border: rgb(217, 215, 215);
+
 .offers {
 	padding: 30px 0 30px 0;
 
@@ -13,6 +15,12 @@
 			li {
 				padding-top: 10px;
 			}
+		}
+		border-bottom: 2px solid $border;
+		margin-bottom: 10px;
+
+		&:last-child {
+			border-bottom: none;
 		}
 	}
 }
@@ -34,6 +42,9 @@
 			.offers_list li {
 				padding-top: 20px;
 			}
+
+			border: none;
+			margin-bottom: 0;
 		}
 	}
 }
