--- a/components/offer/reminder.scss
+++ b/components/offer/reminder.scss
@@ -1,7 +1,11 @@
+$coral: rgb(221, 135, 135);
+
 .reminder {
 	font-weight: bold;
 	text-align: center;
 	text-decoration: underline;
+	color: $coral;
+
 
 	&_desktop {
 		display: none;
